--- a/gra.html
+++ b/gra.html
@@ -19,9 +19,9 @@
 
         <div class="pedido">
         <input type="checkbox" id="sim" name="sim">
-        <label for="scales">Sim</label>
+        <label for="scales">Sim Ou</label>
         <input type="checkbox" id="nao" name="nao">
-        <label for="horns">Ou Sim</label>
+        <label for="horns">Sim</label>
         </div>
         
         <div class="pedido">
